bk_ida/gccida/g3/ix86_register_move_cost
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ix86_register_move_cost/src/i386.c:12815:31: error: must use 'enum' tag to refer to type 'machine_mode'
int  ix86_register_move_cost( machine_mode mode, reg_class class1, reg_class class2) 
                              ^
                              enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ix86_register_move_cost/src/i386.c:12815:50: error: must use 'enum' tag to refer to type 'reg_class'
int  ix86_register_move_cost( machine_mode mode, reg_class class1, reg_class class2) 
                                                 ^
                                                 enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ix86_register_move_cost/src/i386.c:12815:68: error: must use 'enum' tag to refer to type 'reg_class'
int  ix86_register_move_cost( machine_mode mode, reg_class class1, reg_class class2) 
                                                                   ^
                                                                   enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ix86_register_move_cost/src/i386.c:12880:40: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v9 = ( ( unsigned int)( *( ( _DWORD *)&mode_class_0 + ( int)mode) - 5) < 2) + 1; 
                                       ^~~~~~~~~~~~
                                       mode_class
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ix86_register_move_cost/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ix86_register_move_cost/src/i386.c:12901:7: error: use of undeclared identifier 'CSWTCH_1605'
v13 = CSWTCH_1605[v12]; 
      ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ix86_register_move_cost/src/i386.c:12915:7: error: use of undeclared identifier 'CSWTCH_1605'
v13 = CSWTCH_1605[v26]; 
      ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ix86_register_move_cost/src/i386.c:12929:38: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( ( unsigned int)( *( ( _DWORD *)&mode_class_0 + ( int)mode) - 5) <= 1 ) 
                                     ^~~~~~~~~~~~
                                     mode_class
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ix86_register_move_cost/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
7 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ix86_register_move_cost/src/obj/i386.o] Error 1
